--- a/index.qmd
+++ b/index.qmd
@@ -16,12 +16,8 @@ Let's use data for good together!
 
 Hi! I am Jingyi Yang, a graduate student pursuing a Master of Science in Data Analytics and Computational Social Science at UMass Amherst. After earning a Bachelor's degree in Sociology and Psychology, I realized the importance of data in the daily life and had a passion for using data for good. In short, I am interested in using the various programing tools to analyze data and applying data analysis in the decision making.
 
+To learn more about me, please visit my projects and CV pages. Let’s use data for good together!
 
-## Goals
-
-## Education
-
-## Experience
 
 :::
 
